--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "koa": "^2.13.0",
+    "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
     "request": "^2.88.2",
     "selenium-webdriver": "^4.0.0-alpha.7"
