--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa": "^2.13.0",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
+    "node-cron": "^2.0.3",
     "request": "^2.88.2",
     "selenium-webdriver": "^4.0.0-alpha.7"
   }
